--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha -R nyan"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,8 @@
     "url": "https://github.com/nickdesaulniers/javascript-playlist-parser/issues"
   },
   "dependencies": {
-    "chai": "1.7.2"
+    "chai": "1.7.2",
+    "grunt-contrib-coffee": "0.7.0",
+    "grunt-mocha-test": "0.6.3"
   }
 }
