--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "playlist-parser",
   "version": "0.0.0",
   "description": "Parse m3u, pls, and asx",
-  "main": "index.js",
+  "main": "lib/parser.js",
   "directories": {
     "test": "test"
   },
