--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "grunt test",
-    "postinstall": "grunt"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
