--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "playlist-parser",
   "version": "0.0.5",
   "description": "Parse m3u, m3u extended, and pls",
-  "main": "lib/parser.js",
+  "main": "lib/parser.min.js",
   "directories": {
     "test": "test"
   },
@@ -28,6 +28,7 @@
   "devDependencies": {
     "chai": "1.7.2",
     "grunt-contrib-coffee": "0.7.0",
-    "grunt-mocha-test": "0.6.3"
+    "grunt-mocha-test": "0.6.3",
+    "grunt-contrib-uglify": "~0.2.4"
   }
 }
