added ASX support

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "playlist",
     "parse",
     "m3u",
-    "pls"
+    "pls",
+    "asx"
   ],
   "author": "Nick Desaulniers",
   "license": "Dual MIT & Beerware",
@@ -29,6 +30,7 @@
     "chai": "1.7.2",
     "grunt-contrib-coffee": "0.7.0",
     "grunt-mocha-test": "0.6.3",
-    "grunt-contrib-uglify": "~0.2.4"
+    "grunt-contrib-uglify": "~0.2.4",
+    "xmldom": "~0.1.16"
   }
 }
