--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "grunt-contrib-coffee": "0.7.0",
     "grunt-mocha-test": "0.6.3",
     "grunt-contrib-uglify": "~0.2.4",
-    "xmldom": "~0.1.16"
+    "xmldom": "0.1.16"
   }
 }
